[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/not_player/NotPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/not_player/NotPlayer.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/self_destruct.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/land.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/light_textures/Radial2.png" type="Texture" id=5]
[ext_resource path="res://actors/typewriter/Typewriter.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 3.007
height = 19.818

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.62699, -11.7655 ), Vector2( 3.58082, -11.7655 ), Vector2( 3.75134, -12.4476 ), Vector2( 5.45648, -12.4476 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]

resource_name = "self_destruct"
length = 1.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_self_destruct_sound"
}, {
"args": [  ],
"method": "play_landing_sound"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3.32504, -12.6181 ), Vector2( 1.79041, -14.0675 ), Vector2( -2.30195, -13.5559 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 40.4434
height = 159.925

[node name="NotPlayer" type="KinematicBody2D" groups=[
"not_player",
]]

input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
output_text = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
offset = Vector2( 1, -2 )
vframes = 6
hframes = 8
frame = 19
_sections_unfolded = [ "Animation", "Offset" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/self_destruct = SubResource( 3 )
blend_times = [  ]

[node name="DetectPlayer" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer" index="0"]

rotation = 1.5708
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="SelfDestructSound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="LandingSound" type="AudioStreamPlayer" parent="." index="5" groups=[
"not_player",
]]

stream = ExtResource( 4 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Light2D" type="Light2D" parent="." index="6"]

position = Vector2( -2.30195, -13.5559 )
enabled = false
editor_only = false
texture = ExtResource( 5 )
offset = Vector2( 0, 0 )
texture_scale = 0.15
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Typewriter" parent="." index="7" instance=ExtResource( 6 )]

margin_left = -73.0
margin_top = -55.0
margin_right = 11.0
margin_bottom = -85.0
valign = 3

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]


